# short_link_server

./: .gitignore  Cargo.toml  README.md  config.yml
.cargo/: config.toml
db/: Cargo.toml
db/src/: init_db.rs  init_redis.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/handler/: auth.rs  director_301.rs  mod.rs  short_link.rs  user.rs
server/src/initialize/: app_state.rs  config.rs  mod.rs
server/src/logs/: log.rs
server/src/model/: mod.rs  reponse.rs  short_link.rs  user.rs  visit_limit.rs  visit_record.rs
server/src/router/: router.rs
server/src/utils/: devices.rs  ip_location.rs  mod.rs  six_code.rs  token.rs  verify_code.rs
server_config/: Cargo.toml
server_config/src/: config.rs
