[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
state = { version = "0.5", features = ["tls"] }
fast_log = { version="1.5.1", features = ["console","lz4","zip", "gzip"]}
time = { version = "0.3.37", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["time","local-time"] }
config = "0.15.8"
argon2 = "0.5.0"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
rand = "0.8"
regex = "1"
fastdate = "=0.3.34"
reqwest = { version = "0.11", features = ["json"] }

#lib包引入
server_config = { path = "../server_config" }
db= { path = "../db" }


